--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-﻿aiohttp==3.9.5
+setuptools>=65.0
+wheel
+aiohttp==3.9.5
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
 amqp==5.2.0
@@ -127,6 +129,6 @@ websockets==12.0
 Werkzeug==2.2.3
 whitenoise==6.6.0
 yarl==1.9.4
-setuptools>=65.0
-wheel
+
+
 
