--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-setuptools>=65.0
+setuptools==69.5.1
 wheel
+
 aiohttp==3.9.5
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
@@ -129,6 +130,7 @@ websockets==12.0
 Werkzeug==2.2.3
 whitenoise==6.6.0
 yarl==1.9.4
+
 
 
 
