--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 setuptools==75.1.0
-wheel==0.44.0
-pip==24.2
+wheel
+pip
 aiohttp==3.9.5
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
@@ -130,6 +130,7 @@ websockets==12.0
 Werkzeug==2.2.3
 whitenoise==6.6.0
 yarl==1.9.4
+
 
 
 
