--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python=3.11
+python==3.11
 setuptools>=65
 wheel
 Django
@@ -131,6 +131,7 @@ websockets==12.0
 Werkzeug==2.2.3
 whitenoise==6.6.0
 yarl==1.9.4
+
 
 
 
